fix: wrong spacing under the main text component

--- a/src/components/Text/Text.module.scss
+++ b/src/components/Text/Text.module.scss
@@ -29,7 +29,7 @@
 .description {
   max-width: 512px;
   color: $black;
-  margin-bottom: 36px;
+  margin-bottom: 69px;
 
   @media (max-width: 1439px) {
     max-width: 571px;
